boom/measurements/verilator-mega-O3/compile-time-warmup-0.txt
START: Current timestamp in milliseconds: 1731323130306
GROUP: verilator SUBGROUP: firtool COMMAND: firtool --lowering-options=disallowLocalVariables /home/bea/Research/paper-evals/arc-tests/boom//./build/verilator-mega-O3-compile-time-warmup-0//boom.fir -o /home/bea/Research/paper-evals/arc-tests/boom//./build/verilator-mega-O3-compile-time-warmup-0//boom.sv
/home/bea/Research/paper-evals/arc-tests/boom//./build/verilator-mega-O3-compile-time-warmup-0//boom.fir:1:16: error: FIRRTL version must be >=2.0.0
FIRRTL version 1.1.0
               ^

 Performance counter stats for '/usr/local/bin/firtool --lowering-options=disallowLocalVariables,mitigateVivadoArrayIndexConstPropBug /home/bea/Research/paper-evals/arc-tests/boom//./build/verilator-mega-O3-compile-time-warmup-0//boom.fir -o /home/bea/Research/paper-evals/arc-tests/boom//./build/verilator-mega-O3-compile-time-warmup-0//boom.sv':

             30.10 msec task-clock:u                     #    0.983 CPUs utilized             
                 0      context-switches:u               #    0.000 /sec                      
                 0      cpu-migrations:u                 #    0.000 /sec                      
             2,891      page-faults:u                    #   96.059 K/sec                     
         6,611,363      cycles:u                         #    0.220 GHz                         (10.33%)
         9,649,687      stalled-cycles-frontend:u        #  145.96% frontend cycles idle        (15.88%)
       204,748,025      instructions:u                   #   30.97  insn per cycle            
                                                  #    0.05  stalled cycles per insn     (25.84%)
        42,935,839      branches:u                       #    1.427 G/sec                       (35.78%)
           661,365      branch-misses:u                  #    1.54% of all branches             (45.78%)
        90,142,387      L1-dcache-loads:u                #    2.995 G/sec                       (49.80%)
         7,549,669      L1-dcache-load-misses:u          #    8.38% of all L1-dcache accesses   (49.83%)
   <not supported>      LLC-loads:u                                                           
   <not supported>      LLC-load-misses:u                                                     
         1,175,813      L1-icache-loads:u                #   39.068 M/sec                       (49.81%)
             9,318      L1-icache-load-misses:u          #    0.79% of all L1-icache accesses   (49.84%)
            63,491      dTLB-loads:u                     #    2.110 M/sec                       (49.81%)
            30,402      dTLB-load-misses:u               #   47.88% of all dTLB cache accesses  (44.29%)
               411      iTLB-loads:u                     #   13.656 K/sec                       (34.29%)
             1,609      iTLB-load-misses:u               #  391.48% of all iTLB cache accesses  (24.35%)
           774,516      L1-dcache-prefetches:u           #   25.735 M/sec                       (14.39%)
   <not supported>      L1-dcache-prefetch-misses:u                                           

       0.030606828 seconds time elapsed

       0.016965000 seconds user
       0.013566000 seconds sys


GROUP: verilator SUBGROUP: verilator
%Error: Cannot find file containing module: '/home/bea/Research/paper-evals/arc-tests/boom/./build/verilator-mega-O3-compile-time-warmup-0/boom.sv'
%Error: This may be because there's no search path specified with -I<dir>.
        ... Looked in:
             /home/bea/Research/paper-evals/arc-tests/boom/./build/verilator-mega-O3-compile-time-warmup-0/boom.sv
             /home/bea/Research/paper-evals/arc-tests/boom/./build/verilator-mega-O3-compile-time-warmup-0/boom.sv.v
             /home/bea/Research/paper-evals/arc-tests/boom/./build/verilator-mega-O3-compile-time-warmup-0/boom.sv.sv
             /home/bea/Research/paper-evals/arc-tests/boom/./build/verilator-mega-O3-compile-time-warmup-0/boom-vtor//home/bea/Research/paper-evals/arc-tests/boom/./build/verilator-mega-O3-compile-time-warmup-0/boom.sv
             /home/bea/Research/paper-evals/arc-tests/boom/./build/verilator-mega-O3-compile-time-warmup-0/boom-vtor//home/bea/Research/paper-evals/arc-tests/boom/./build/verilator-mega-O3-compile-time-warmup-0/boom.sv.v
             /home/bea/Research/paper-evals/arc-tests/boom/./build/verilator-mega-O3-compile-time-warmup-0/boom-vtor//home/bea/Research/paper-evals/arc-tests/boom/./build/verilator-mega-O3-compile-time-warmup-0/boom.sv.sv
%Error: Exiting due to 2 error(s)

 Performance counter stats for '/usr/bin/verilator -O3 --noassert --x-assign fast --x-initial fast --threads 1 -sv -cc -Mdir /home/bea/Research/paper-evals/arc-tests/boom//./build/verilator-mega-O3-compile-time-warmup-0//boom-vtor /home/bea/Research/paper-evals/arc-tests/boom//./build/verilator-mega-O3-compile-time-warmup-0//boom.sv /home/bea/Research/paper-evals/arc-tests/boom/../verilator-stubs.sv -j 0 -DPRINTF_COND=0 -DASSERT_VERBOSE_COND=0 -DSTOP_COND=0 -Wno-WIDTH':

             62.60 msec task-clock:u                     #    1.604 CPUs utilized             
                 0      context-switches:u               #    0.000 /sec                      
                 0      cpu-migrations:u                 #    0.000 /sec                      
             4,238      page-faults:u                    #   67.701 K/sec                     
       159,670,770      cycles:u                         #    2.551 GHz                         (56.91%)
        19,652,340      stalled-cycles-frontend:u        #   12.31% frontend cycles idle        (52.62%)
       373,791,273      instructions:u                   #    2.34  insn per cycle            
                                                  #    0.05  stalled cycles per insn     (13.50%)
        41,747,266      branches:u                       #  666.902 M/sec                       (35.14%)
         1,715,724      branch-misses:u                  #    4.11% of all branches             (44.51%)
       100,651,985      L1-dcache-loads:u                #    1.608 G/sec                       (46.76%)
         2,184,768      L1-dcache-load-misses:u          #    2.17% of all L1-dcache accesses   (46.76%)
   <not supported>      LLC-loads:u                                                           
   <not supported>      LLC-load-misses:u                                                     
        27,779,929      L1-icache-loads:u                #  443.778 M/sec                       (46.74%)
           441,619      L1-icache-load-misses:u          #    1.59% of all L1-icache accesses   (46.77%)
           575,769      dTLB-loads:u                     #    9.198 M/sec                       (46.77%)
            26,162      dTLB-load-misses:u               #    4.54% of all dTLB cache accesses  (49.90%)
           458,236      iTLB-loads:u                     #    7.320 M/sec                       (67.63%)
            13,975      iTLB-load-misses:u               #    3.05% of all iTLB cache accesses  (62.85%)
           710,167      L1-dcache-prefetches:u           #   11.345 M/sec                       (58.06%)
   <not supported>      L1-dcache-prefetch-misses:u                                           

       0.039036778 seconds time elapsed

       0.012906000 seconds user
       0.049491000 seconds sys


GROUP: verilator SUBGROUP: clang
